--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-    <title> XXXXXXX </title>
+    <title> one thing we gonna do is LOL so hard 😂😂 </title>
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
@@ -70,7 +70,7 @@
 
         <div class="video-box">
             <video controls autoplay muted playsinline controlslist="nofullscreen nodownload noremoteplayback" disablepictureinpicture preload="metadata">
-                <source src="https://cdn.videy.co/mmEUXuPF1.mp4" type="video/mp4">
+                <source src="https://cdn.videy.co/q2roxDHG1.mp4" type="video/mp4">
             </video>
         </div>
         
